feat: add itemName filter to salaService
