# docs/swagger.yaml
@@ -216,6 +216,12 @@ paths:
           schema:
             type: integer
           description: Localização da sala
+        - in: path
+          name: itemName
+          required: false
+          schema:
+            type: string
+          description: Nome do item
       responses:
         "200":
           description: List of items for the specified sala
